--- a/package.json
+++ b/package.json
@@ -7,10 +7,15 @@
     "dev": "tsx watch src/index.ts"
   },
   "keywords": [],
-  "author": "",
+  "author": "Anderson Menezes",
   "license": "ISC",
   "devDependencies": {
+    "@types/express": "^4.17.15",
+    "@types/node": "^18.13.0",
     "tsx": "^3.12.7",
     "typescript": "^5.1.3"
+  },
+  "dependencies": {
+    "express": "^4.18.2"
   }
 }
