--- a/package.json
+++ b/package.json
@@ -4,18 +4,31 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "tsx watch src/index.ts"
+    "dev": "tsx watch src/app.ts"
   },
   "keywords": [],
   "author": "Anderson Menezes",
   "license": "ISC",
   "devDependencies": {
+    "@types/config": "^3.3.0",
     "@types/express": "^4.17.15",
+    "@types/mongoose": "^5.11.97",
+    "@types/morgan": "^1.9.4",
     "@types/node": "^18.13.0",
+    "ts-node-dev": "^2.0.0",
     "tsx": "^3.12.7",
     "typescript": "^5.1.3"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "config": "^3.3.9",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "express-validator": "^7.0.1",
+    "jsonwebtoken": "^9.0.0",
+    "mongodb": "^5.6.0",
+    "mongoose": "^7.3.1",
+    "morgan": "^1.10.0",
+    "uuid": "^9.0.0",
+    "winston": "^3.9.0"
   }
 }
